# homelab

./: .gitignore  CHANGELOGS.md  Cargo.toml  README.md  todos.md
src/: files.rs  main.rs
src/api/: api.rs  controllers.rs  mod.rs  router.rs
src/api/controllers/: get_files.rs  mod.rs  read_file.rs
src/disk/: files.rs
src/root_files_folder/: index.html
src/views/: index.html
